fix commit problem